# Bitcoin

Scala/src/main/scala/: FieldElement.scala
Scala/src/test/scala/: FieldElementTest.scala
cpp/: CMakeLists.txt  Transaction.cpp  Transaction.h  Tx.cpp  Tx.h  address.cpp  address.h  base58.cpp  base58.h  genAddress.cpp  main.cpp  script.cpp  script.h  span.h  stream.cpp  stream.h  strencodings.cpp  strencodings.h  test.cpp  transaction.cpp  transaction.h  uint256.cpp  uint256.h  utils.cpp  utils.h
go/: field.go  field_test.go
python/: FieldElement.py
